@@ -1,4 +1,4 @@
-C ROS $Id: gnuplot.doc,v 1.515 2008/06/24 19:32:42 sfeam Exp $
+C ROS $Id: gnuplot.doc,v 1.516 2008/06/26 17:00:47 janert Exp $
 C
 C Copyright (C) 1986 - 1993, 1998, 1999, 2000, 2001, 2004   Thomas Williams, Colin Kelley et al.
 C
@@ -4588,7 +4588,7 @@ Ffigure_mapcontours
  externally or by using `fit` with an appropriate model.
 
  Syntax:
-       smooth {unique | frequency | cumulative | csplines | acsplines | bezier | sbezier}
+       smooth {unique | frequency | cumulative | kdensity | csplines | acsplines | bezier | sbezier}
 
  `unique`, `frequency`, and `cumulative` plot the data after making them 
  monotonic.  Each of the other routines uses the data to determine the 
@@ -4721,6 +4721,26 @@ Ffigure_mapcontours
 ^ <a href="http://www.gnuplot.info/demo/smooth.html">
  smooth.dem
 ^ </a>
+5 kdensity
+?commands plot datafile smooth kdensity
+?plot datafile smooth kdensity
+?plot smooth kdensity
+?data-file smooth kdensity
+?datafile smooth kdensity
+?plot kdensity
+?smooth kdensity
+?kdensity
+ The `kdensity` option is a way to plot a kernel density estimate (which is a
+ smooth histogram) for a random collection of points, using Gaussian kernels.
+ A Gaussian is placed at the location of each point in the first column and
+ the sum of all these Gaussians is plotted as a function. The value in the
+ second column is taken as weight of the Gaussian. (To obtain a normalized
+ histogram, this should be 1/number-of-points). The value of the third column,
+ if supplied, is taken as the bandwidth for the kernels. If only two columns
+ have been specified, or if the value of the third column is zero or less,
+ gnuplot calculates the bandwidth which would be optimal if the input data was
+ normally distributed. (This will usually be a very conservative, i.e. broad 
+ bandwidth.)
 4 special-filenames
 ?commands plot datafile special-filenames
 ?plot datafile special-filenames
