@@ -1,5 +1,5 @@
 #ifndef lint
-static char *RCSid() { return RCSid("$Id: interpol.c,v 1.33 2008/05/18 03:49:12 janert Exp $"); }
+static char *RCSid() { return RCSid("$Id: interpol.c,v 1.34 2008/06/26 17:00:50 janert Exp $"); }
 #endif
 
 /* GNUPLOT - interpol.c */
@@ -245,6 +245,132 @@ num_curves(struct curve_points *plot)
     return (curves);
 }
 
+
+/* PKJ - May 2008 
+   kdensity (short for Kernel Density) builds histograms using
+   "Kernel Density Estimation" using Gaussian Kernels.
+   Check: L. Wassermann: "All of Statistics" for example.
+
+   The implementation is based closely on the implementation for Bezier
+   curves, except for the way the actual interpolation is generated.
+*/
+
+/* eval_kdensity is a modification of eval_bezier */
+void eval_kdensity ( 
+    struct curve_points *cp,
+    int first_point,	/* where to start in plot->points (to find x-range) */
+    int num_points,	/* to determine end in plot->points */
+    double sr,		/* position inside curve, range [0:1] */
+    coordval *px,	/* OUTPUT: x and y */
+    coordval *py ) {
+
+    unsigned int i;
+    unsigned int n = num_points - 1;
+    struct coordinate GPHUGE *this_points = (cp->points) + first_point;
+  
+    double x, y, tmp;
+    double avg, sigma;
+    double min =  DBL_MAX;
+    double max = -DBL_MAX;
+    double bandwidth, default_bandwidth;
+
+    avg = 0.0;
+    sigma = 0.0;
+    for (i = 0; i <= n; i++) {
+      avg   += this_points[i].x;
+      sigma += this_points[i].x * this_points[i].x;
+
+      /* Find min and max of x-range. Necessary since points not sorted! */
+      min = this_points[i].x < min ? this_points[i].x : min;
+      max = this_points[i].x > max ? this_points[i].x : max;
+    }
+    avg /= (double)n;
+    sigma = sqrt( (sigma - avg*avg)/(double)n ); /* Standard Deviation */
+    
+    /* This is the optimal bandwidth if the point distributin is Gaussian.
+       (Applied Smoothing Techniques for Data Analysis
+       by Adrian W, Bowman & Adelchi Azzalini (1997) */
+    default_bandwidth = pow( 4.0/(3.0*num_points), 1.0/5.0 )*sigma;
+
+    /* If the supplied bandwidth is zero of less, the default bandwidth
+       is used. If only two columns have been specified in the using
+       declaration, the value of the third column (z-value) is set to
+       the value of '-1' in plot2d.c::get_data(). Therefore, a negative
+       value of z indicates that the default bandwidth should be used.
+       (I would prefer that a different magic value would be used to
+       indicate a missing third column, so that we we could fail if 
+       the user supplies a negative bandwidth, but the -1 seems too
+       deeply ingrained.) */
+
+    x = min + sr*(max-min); /* The current x-value */
+
+    y = 0;
+    for (i = 0; i <= n; i++) {
+      if ( this_points[i].z <= 0 ) {
+	bandwidth = default_bandwidth;
+      } else {
+	bandwidth = this_points[i].z;
+      }
+      
+      tmp = ( x - this_points[i].x )/bandwidth;
+      y += this_points[i].y * exp( - 0.5*tmp*tmp ) / bandwidth;
+    }
+    y /= sqrt(2.0*M_PI);
+
+    *px = x;
+    *py = y;
+}
+
+/* do_kdensity is based on do_bezier, except for the call to eval_bezier */
+static void 
+do_kdensity( 
+    struct curve_points *cp,
+    int first_point,		/* where to start in plot->points */
+    int num_points,		/* to determine end in plot->points */
+    struct coordinate *dest)	/* where to put the interpolated data */
+{
+    int i;
+    coordval x, y;
+
+    /* min and max in internal (eg logged) co-ordinates. We update
+     * these, then update the external extrema in user co-ordinates
+     * at the end.
+     */
+
+    double ixmin, ixmax, iymin, iymax;
+    double sxmin, sxmax, symin, symax;	/* starting values of above */
+
+    x_axis = cp->x_axis;
+    y_axis = cp->y_axis;
+
+    ixmin = sxmin = AXIS_LOG_VALUE(x_axis, X_AXIS.min);
+    ixmax = sxmax = AXIS_LOG_VALUE(x_axis, X_AXIS.max);
+    iymin = symin = AXIS_LOG_VALUE(y_axis, Y_AXIS.min);
+    iymax = symax = AXIS_LOG_VALUE(y_axis, Y_AXIS.max);
+
+    for (i = 0; i < samples_1; i++) {
+        eval_kdensity( cp, first_point, num_points,
+		       (double) i / (double) (samples_1 - 1),
+		       &x, &y );
+
+	/* now we have to store the points and adjust the ranges */
+	dest[i].type = INRANGE;
+	STORE_AND_FIXUP_RANGE( dest[i].x, x, dest[i].type, ixmin, ixmax, 
+			       X_AXIS.autoscale, NOOP, continue);
+	STORE_AND_FIXUP_RANGE( dest[i].y, y, dest[i].type, iymin, iymax, 
+			       Y_AXIS.autoscale, NOOP, NOOP);
+
+	dest[i].xlow = dest[i].xhigh = dest[i].x;
+	dest[i].ylow = dest[i].yhigh = dest[i].y;
+
+	dest[i].z = -1;
+    }
+
+    UPDATE_RANGE(ixmax > sxmax, X_AXIS.max, ixmax, x_axis);
+    UPDATE_RANGE(ixmin < sxmin, X_AXIS.min, ixmin, x_axis);
+    UPDATE_RANGE(iymax > symax, Y_AXIS.max, iymax, y_axis);
+    UPDATE_RANGE(iymin < symin, Y_AXIS.min, iymin, y_axis);
+}
 
 
 /*
@@ -936,6 +1062,10 @@ gen_interp(struct curve_points *plot)
 		      new_points + i * (samples_1 + 1));
 	    free((char *) bc);
 	    break;
+	case SMOOTH_KDENSITY:
+	  do_kdensity( plot, first_point, num_points, 
+		       new_points + i * (samples_1 + 1));
+	  break;
 	default:		/* keep gcc -Wall quiet */
 	    ;
 	}
